Update JavaFX to version 25