@@ -30,10 +30,14 @@ tasks.withType(JavaCompile) {
 application {
     mainModule = 'org.kengjer.applytrack'
     mainClass = 'org.kengjer.applytrack.HelloApplication'
+
+    applicationDefaultJvmArgs = [
+            '--enable-native-access=javafx.graphics'
+    ]
 }
 
 javafx {
-    version = '17.0.6'
+    version = '25'
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
